--- a/InterviewMe.Web/Scripts/react-temp/public/index.html
+++ b/InterviewMe.Web/Scripts/react-temp/public/index.html
@@ -7,10 +7,10 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/android-icon-144x144.png">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet">
   <title>Interview Me</title>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
